--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,9 @@
     "zod": "latest"
   },
   "devDependencies": {
-    "@types/node": "latest",
+   "@types/node": "^20.11.30",
+"vite": "^5.0.11"
+ "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@vitejs/plugin-react": "latest",
