--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
+    "types": ["node", "vite/client"]
     "moduleResolution": "bundler",
     "baseUrl": ".",
     "types": ["node", "vite/client"],
